use templating for html generation

--- a/phaselist.html
+++ b/phaselist.html
@@ -1,85 +1,99 @@
-<html><head><link href='default.css' rel='stylesheet'></head><body><table><tr><th>Phase Name</th><th>Phase Start</th><th>Phase Date</th><th>Phase End</th></tr><tr class="cell row type_3">
-	<td class="cell phase_name">Last Quarter Moon</td> 
-	<td class="cell phase_start">21-Oct-2016</td> 
-	<td class="cell phase_date">23-Oct-2016</td> 
-	<td class="cell phase_end">25-Oct-2016</td> 
-</tr>
-<tr class="cell row type_0">
-	<td class="cell phase_name">The New Moon</td> 
-	<td class="cell phase_start">26-Oct-2016</td> 
-	<td class="cell phase_date">31-Oct-2016</td> 
-	<td class="cell phase_end">05-Nov-2016</td> 
-</tr>
-<tr class="cell row type_1">
-	<td class="cell phase_name">First Quarter Moon</td> 
-	<td class="cell phase_start">06-Nov-2016</td> 
-	<td class="cell phase_date">08-Nov-2016</td> 
-	<td class="cell phase_end">10-Nov-2016</td> 
-</tr>
-<tr class="cell row type_2">
-	<td class="cell phase_name">The Full Moon</td> 
-	<td class="cell phase_start">11-Nov-2016</td> 
-	<td class="cell phase_date">15-Nov-2016</td> 
-	<td class="cell phase_end">18-Nov-2016</td> 
-</tr>
-<tr class="cell row type_3">
-	<td class="cell phase_name">Last Quarter Moon</td> 
-	<td class="cell phase_start">19-Nov-2016</td> 
-	<td class="cell phase_date">21-Nov-2016</td> 
-	<td class="cell phase_end">23-Nov-2016</td> 
-</tr>
-<tr class="cell row type_0">
-	<td class="cell phase_name">The New Moon</td> 
-	<td class="cell phase_start">24-Nov-2016</td> 
-	<td class="cell phase_date">29-Nov-2016</td> 
-	<td class="cell phase_end">04-Dec-2016</td> 
-</tr>
-<tr class="cell row type_1">
-	<td class="cell phase_name">First Quarter Moon</td> 
-	<td class="cell phase_start">05-Dec-2016</td> 
-	<td class="cell phase_date">07-Dec-2016</td> 
-	<td class="cell phase_end">09-Dec-2016</td> 
-</tr>
-<tr class="cell row type_2">
-	<td class="cell phase_name">The Full Moon</td> 
-	<td class="cell phase_start">10-Dec-2016</td> 
-	<td class="cell phase_date">14-Dec-2016</td> 
-	<td class="cell phase_end">18-Dec-2016</td> 
-</tr>
-<tr class="cell row type_3">
-	<td class="cell phase_name">Last Quarter Moon</td> 
-	<td class="cell phase_start">19-Dec-2016</td> 
-	<td class="cell phase_date">21-Dec-2016</td> 
-	<td class="cell phase_end">23-Dec-2016</td> 
-</tr>
-<tr class="cell row type_0">
-	<td class="cell phase_name">The New Moon</td> 
-	<td class="cell phase_start">24-Dec-2016</td> 
-	<td class="cell phase_date">29-Dec-2016</td> 
-	<td class="cell phase_end">03-Jan-2017</td> 
-</tr>
-<tr class="cell row type_1">
-	<td class="cell phase_name">First Quarter Moon</td> 
-	<td class="cell phase_start">04-Jan-2017</td> 
-	<td class="cell phase_date">06-Jan-2017</td> 
-	<td class="cell phase_end">08-Jan-2017</td> 
-</tr>
-<tr class="cell row type_2">
-	<td class="cell phase_name">The Full Moon</td> 
-	<td class="cell phase_start">09-Jan-2017</td> 
-	<td class="cell phase_date">12-Jan-2017</td> 
-	<td class="cell phase_end">17-Jan-2017</td> 
-</tr>
-<tr class="cell row type_3">
-	<td class="cell phase_name">Last Quarter Moon</td> 
-	<td class="cell phase_start">18-Jan-2017</td> 
-	<td class="cell phase_date">20-Jan-2017</td> 
-	<td class="cell phase_end">22-Jan-2017</td> 
-</tr>
-<tr class="cell row type_0">
-	<td class="cell phase_name">The New Moon</td> 
-	<td class="cell phase_start">23-Jan-2017</td> 
-	<td class="cell phase_date">28-Jan-2017</td> 
-	<td class="cell phase_end">01-Feb-2017</td> 
-</tr>
-</table></body></html>
+<html>
+<head>
+    <link href='public/default.css' rel='stylesheet'>
+</head>
+<body>
+<table>
+    <tr>
+        <th>Phase Name</th>
+        <th>Phase Start</th>
+        <th>Phase Date</th>
+        <th>Phase End</th>
+    </tr>
+    <tr class="cell row type_3">
+        <td class="cell phase_name">Last Quarter Moon</td>
+        <td class="cell phase_start">21-Oct-2016</td>
+        <td class="cell phase_date">23-Oct-2016</td>
+        <td class="cell phase_end">25-Oct-2016</td>
+    </tr>
+    <tr class="cell row type_0">
+        <td class="cell phase_name">The New Moon</td>
+        <td class="cell phase_start">26-Oct-2016</td>
+        <td class="cell phase_date">31-Oct-2016</td>
+        <td class="cell phase_end">05-Nov-2016</td>
+    </tr>
+    <tr class="cell row type_1">
+        <td class="cell phase_name">First Quarter Moon</td>
+        <td class="cell phase_start">06-Nov-2016</td>
+        <td class="cell phase_date">08-Nov-2016</td>
+        <td class="cell phase_end">10-Nov-2016</td>
+    </tr>
+    <tr class="cell row type_2">
+        <td class="cell phase_name">The Full Moon</td>
+        <td class="cell phase_start">11-Nov-2016</td>
+        <td class="cell phase_date">15-Nov-2016</td>
+        <td class="cell phase_end">18-Nov-2016</td>
+    </tr>
+    <tr class="cell row type_3">
+        <td class="cell phase_name">Last Quarter Moon</td>
+        <td class="cell phase_start">19-Nov-2016</td>
+        <td class="cell phase_date">21-Nov-2016</td>
+        <td class="cell phase_end">23-Nov-2016</td>
+    </tr>
+    <tr class="cell row type_0">
+        <td class="cell phase_name">The New Moon</td>
+        <td class="cell phase_start">24-Nov-2016</td>
+        <td class="cell phase_date">29-Nov-2016</td>
+        <td class="cell phase_end">04-Dec-2016</td>
+    </tr>
+    <tr class="cell row type_1">
+        <td class="cell phase_name">First Quarter Moon</td>
+        <td class="cell phase_start">05-Dec-2016</td>
+        <td class="cell phase_date">07-Dec-2016</td>
+        <td class="cell phase_end">09-Dec-2016</td>
+    </tr>
+    <tr class="cell row type_2">
+        <td class="cell phase_name">The Full Moon</td>
+        <td class="cell phase_start">10-Dec-2016</td>
+        <td class="cell phase_date">14-Dec-2016</td>
+        <td class="cell phase_end">18-Dec-2016</td>
+    </tr>
+    <tr class="cell row type_3">
+        <td class="cell phase_name">Last Quarter Moon</td>
+        <td class="cell phase_start">19-Dec-2016</td>
+        <td class="cell phase_date">21-Dec-2016</td>
+        <td class="cell phase_end">23-Dec-2016</td>
+    </tr>
+    <tr class="cell row type_0">
+        <td class="cell phase_name">The New Moon</td>
+        <td class="cell phase_start">24-Dec-2016</td>
+        <td class="cell phase_date">29-Dec-2016</td>
+        <td class="cell phase_end">03-Jan-2017</td>
+    </tr>
+    <tr class="cell row type_1">
+        <td class="cell phase_name">First Quarter Moon</td>
+        <td class="cell phase_start">04-Jan-2017</td>
+        <td class="cell phase_date">06-Jan-2017</td>
+        <td class="cell phase_end">08-Jan-2017</td>
+    </tr>
+    <tr class="cell row type_2">
+        <td class="cell phase_name">The Full Moon</td>
+        <td class="cell phase_start">09-Jan-2017</td>
+        <td class="cell phase_date">12-Jan-2017</td>
+        <td class="cell phase_end">17-Jan-2017</td>
+    </tr>
+    <tr class="cell row type_3">
+        <td class="cell phase_name">Last Quarter Moon</td>
+        <td class="cell phase_start">18-Jan-2017</td>
+        <td class="cell phase_date">20-Jan-2017</td>
+        <td class="cell phase_end">22-Jan-2017</td>
+    </tr>
+    <tr class="cell row type_0">
+        <td class="cell phase_name">The New Moon</td>
+        <td class="cell phase_start">23-Jan-2017</td>
+        <td class="cell phase_date">28-Jan-2017</td>
+        <td class="cell phase_end">01-Feb-2017</td>
+    </tr>
+</table>
+</body>
+</html>
