--- a/phaselist.html
+++ b/phaselist.html
@@ -62,7 +62,7 @@
 
     <nav role="navigation" class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#" onclick="flip('phaselist');">Phase List</a>
+            <a class="navbar-brand" href="#" onclick="flip('phaselist');">Phase Lister</a>
         </div>
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
